<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

       <item
           android:id="@+id/nav_first_fragment"
           android:icon="@drawable/chinese_ingot"
           android:title="@string/big_lotto"/>

        <item
        android:id="@+id/nav_Second_fragment"
        android:icon="@drawable/chinese_ingot"
        android:title="@string/lotto_539"/>

        <item
            android:id="@+id/nav_Third_fragment"
            android:icon="@drawable/chinese_ingot"
            android:title="@string/star3_lotto"/>

        <item
            android:id="@+id/nav_Fourth_fragment"
            android:icon="@drawable/chinese_ingot"
            android:title="@string/star4_lotto"/>

    </group>

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_lucky"
                    android:icon="@android:drawable/star_on"
                    android:title="@string/lucky_day" />


                <item
                    android:id="@+id/nav_taiwan_lottery"
                    android:icon="@android:drawable/ic_menu_search"
                    android:title="@string/taiwan_lottery"/>

            </group>
        </menu>
    </item>

</menu>