<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.admin.claire.lotto.fragment.Star4Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/lotte_4Star_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:hint="@string/star4_lotto"
            android:text=""
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btn4StarRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/lotte_4Star_Text"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:background="#65e72a2a"
            android:text="@string/btn_random"
            android:textColor="#f2ee0f"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnRe4Star_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/lotte_4Star_Text"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:background="#26ffffff"
            android:text="@string/btn_retry"
            android:textColor="#f2ee0f"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_4StarSaveBettingOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#65e72a2a"
            android:text="@string/betting_on"
            android:textColor="#e9e913"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:layout_below="@+id/lotte_4Star_Text"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>


</RelativeLayout>
