<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.admin.claire.lotto.fragment.BigLottoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/big_lotte_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:hint="@string/big_lotto"
            android:text=""
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/big_spacial_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/big_lotte_Text"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/special_number"
            android:text=""
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="24sp"
            android:textStyle="italic"/>

        <ImageView
            android:id="@+id/basicPlay_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/help"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="13dp"
            android:layout_above="@+id/btn_random"
            android:layout_alignEnd="@+id/btn_random"/>

        <Button
            android:id="@+id/btn_BettingOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#65e72a2a"
            android:text="@string/betting_on"
            android:textColor="#e9e913"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@+id/big_spacial_Text"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btn_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/big_lotte_Text"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:background="#65e72a2a"
            android:text="@string/btn_random"
            android:textColor="#f2ee0f"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_Re_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/big_lotte_Text"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:background="#65e72a2a"
            android:text="@string/btn_retry"
            android:textColor="#f2ee0f"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

    </RelativeLayout>


</RelativeLayout>
